--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="dist/example.css">
 </head>
 <body>
-    <div id="app"></div>
+    <div class="container">
+        <div id="app"></div>
+    </div>
 
     <script src="dist/example.js"></script>
 </body>
